# CFPiHole

./: .gitignore  README.md  cloudflare.py  config.ini  main.py  pyproject.toml  requirements.txt  whitelist.txt
.github/workflows/: updateCF.yml
tmp/: hagezi  oisd
